longhor/longhorn-ingress-host.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx

  name: longhorn-ui
  namespace: longhorn-system
spec:
  rules:
    - host: k8s.logn.club
      http:
        paths:
          - backend:
              serviceName: longhorn-frontend
              servicePort: 80
            path: /
            pathType: Prefix
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - k8s.logn.club
        secretName: k8s-ingress-tls
