longhor/longhorn-ingress-url.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    #nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: longhorn-ui
  namespace: longhorn-system
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              serviceName: longhorn-frontend
              servicePort: 80
            #path: /longhorn(/|$)(.*)
            path: /longhorn/(.*)
            #path: /
            pathType: Prefix
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - k8s.logn.club
        secretName: k8s-ingress-tls
